tests/typechecking/valid/simple_letrec.ml
let rec unit x = x in 7