tests/typechecking/invalid/app_fun_no_existing.ml
let rec f x = 5 in g 7